fix toggle dropdowns showing up off screen

--- a/src/css/lobby.css
+++ b/src/css/lobby.css
@@ -1,7 +1,10 @@
 .timestamp {
   white-space: nowrap;
 }
-
+.dropdown-menu {
+  left: auto !important;
+  right: 0;
+}
 
 
 
